--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
         <meta name="viewport" content="width=device-width,initial-scale=1.0">
         <title>Jessica Austin | WDD 130</title>
         <link rel="stylesheet" href="styles/styles.css">
+        <meta name="description" content="Jessica Austin, Web Fundamentals">
+        <meta name="author" content="Jessica Austin">
     </head>
     <body>
         <header>
@@ -18,6 +20,11 @@
             <img src="images/profile.jpg" alt="Hello, my name is Jessica Austin" width="200">
             <p> Hello! My name is Jessica Austin, I am from Dayton, Nevada. I enjoy being with friends and playing sports. </p>
         </main>
+        <aside>
+            <h2>Nevada</h2>
+            <img src="images/nevada.jpg" alt="Nevada landscape">
+            <p>Nevada is a state in the Western United States. It is bordered by California, Utah, Idaho, Arizona, and Oregon. It is famous for gambling, and it known as the Silver State because of its mining. It also has part of Lake Tahoe a part of it. </p>
+        </aside>
         <footer>
             <p> &copy;2024 😎 Jessica Austin 😎 Dayton, Nevada</p>
         </footer>
