--- a/wwr/about.html
+++ b/wwr/about.html
@@ -9,6 +9,8 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Lato&family=Oswald:wght@200..700&display=swap" rel="stylesheet">
+    <meta name="description" content="Jessica Austin, White Water Rafting">
+    <meta name="author" content="Jessica Austin">
 <title>About Us</title>
     </head>
     <body>
@@ -36,24 +38,24 @@
             </section>
             <section>
                 <h2>Adventure Awaits You!</h2>
-                <img src="images/raftingexample1.jpg" alt="Example 1">
-                <img src="images/raftingexample2.jpg" alt="Example 2">
-                <img src="images/raftingexample3.jpg" alt="Example 3">
-                <img src="images/raftingexample4.jpg" alt="Example 4">
-                <img src="images/raftingexample5.jpg" alt="Example 5">
+                <img src="images/raftingexample1.jpg" alt="Example 1" width="200">
+                <img src="images/raftingexample2.jpg" alt="Example 2" width="200">
+                <img src="images/raftingexample3.jpg" alt="Example 3" width="200">
+                <img src="images/raftingexample4.jpg" alt="Example 4" width="200">
+                <img src="images/raftingexample5.jpg" alt="Example 5" width="200">
             </section>
         </main>
         <footer>
             <p> &copy;2024 White Water Rafting 😎 Jessica Austin 😎</p>
             <nav class="sociallinks">
                 <a href="https://facebook.com">
-                    <img src="images/facebook.svg" alt="Facebook">
+                    <img src="images/facebook.webp" alt="Facebook" width="50">
                 </a>
                 <a href="https://twitter.com">
-                    <img src="images/twitter.svg" alt="Twitter">
+                    <img src="images/twitter.webp" alt="Twitter" width="50">
                 </a>
                 <a href="https://instagram.com">
-                    <img src="images/instagram.svg" alt="Instagram">
+                    <img src="images/instagram.webp" alt="Instagram" width="50">
                 </a>
             </nav>
         </footer>
