--- a/wwr/about.html
+++ b/wwr/about.html
@@ -9,9 +9,9 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Lato&family=Oswald:wght@200..700&display=swap" rel="stylesheet">
-    <meta name="description" content="Jessica Austin, White Water Rafting">
+    <meta name="description" content="Jessica Austin, Dry Oar Rafting">
     <meta name="author" content="Jessica Austin">
-<title>About Us</title>
+<title>About Us-Dry Oar Rafting</title>
     </head>
     <body>
         <header>
@@ -46,7 +46,7 @@
             </section>
         </main>
         <footer>
-            <p> &copy;2024 White Water Rafting 😎 Jessica Austin 😎</p>
+            <p> &copy;2024 Dry Oar Rafting 😎 Jessica Austin 😎</p>
             <nav class="sociallinks">
                 <a href="https://facebook.com">
                     <img src="images/facebook.webp" alt="Facebook" width="50">
