--- a/wwr/about.html
+++ b/wwr/about.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-US">
     <head>
+        <link rel="stylesheet" href="wwr/styles/rafting.css">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -29,20 +30,35 @@
                 <h1>White Water Rafting</h1>
                 <article>
                     <img src="images/happyclient.jpg" alt="Happy Client">
-                    <p> kjfdlsdjflsd</p>
+                    <p> Find your adventure with us on the rapids! </p>
                 </article>
             </div>
             <section>
                 <h2>History</h2>
-                <p>sldfjlsdkfj</p>
+                <p>The Dry Oar Rafting Company started in 1950 taking only a few passengers at a time down the Truckee River in Nevada and California.</p>
             </section>
             <section>
                 <h2>Adventure Awaits You!</h2>
+                <figure>
                 <img src="images/raftingexample1.jpg" alt="Example 1" width="200">
+                <figcaption>Tour West Rapids</figcaption>
+                </figure>
+                <figure>
                 <img src="images/raftingexample2.jpg" alt="Example 2" width="200">
+                <figcaption>First Person POV of Canyons River Rapids</figcaption>
+                </figure>
+                <figure>
                 <img src="images/raftingexample3.jpg" alt="Example 3" width="200">
+                <figcaption>Green River Rapids</figcaption>
+                </figure>
+                <figure>
                 <img src="images/raftingexample4.jpg" alt="Example 4" width="200">
+                <figcaption>Solo Trip Rapids</figcaption>
+                </figure>
+                <figure>
                 <img src="images/raftingexample5.jpg" alt="Example 5" width="200">
+                <figcaption>Guided Personal Rapids Adventure</figcaption>
+                </figure>
             </section>
         </main>
         <footer>
