--- a/wwr/about.html
+++ b/wwr/about.html
@@ -1,27 +1,24 @@
 <!DOCTYPE html>
 <html lang="en-US">
     <head>
-    <link rel="stylesheet" href="wwr/styles/rafting.css">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Lato:wght@700&family=Oswald:wght@200..700&display=swap" rel="stylesheet">
+    <meta name="description" content="About Page, Dry Oar Rafting">
+    <meta name="author" content="Jessica Austin">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Lato&family=Oswald:wght@200..700&display=swap" rel="stylesheet">
-    <meta name="description" content="Jessica Austin, Dry Oar Rafting">
-    <meta name="author" content="Jessica Austin">
 <title>About Us-Dry Oar Rafting</title>
+<link rel="stylesheet" href="styles/rafting.css">
     </head>
     <body>
         <header>
             <img src="images/dryoarlogo.png" alt="Dry Oar">
             <nav>
                 <a href="index.html">Home</a>
-                <a href="about.html">Link</a>
-                <a href="trips.html">Link</a>
-                <a href="contact.html">Link</a>
+                <a href="about.html">About Us</a>
+                <a href="trips.html">Trips</a>
+                <a href="contact.html">Contact Us</a>
             </nav>
         </header>
         <main>
@@ -36,9 +33,12 @@
             <section>
                 <h2>History</h2>
                 <p>The Dry Oar Rafting Company started in 1950 taking only a few passengers at a time down the Truckee River in Nevada and California.</p>
+            <img src="images/history.webp" alt="history img">
+                <p>sdkfjsldfjsldkfjsaldkfjldsfjleskfsldfj</p>
             </section>
             <section>
                 <h2>Adventure Awaits You!</h2>
+                <div class="adventure">
                 <figure>
                 <img src="images/raftingexample1.jpg" alt="Example 1" width="200">
                 <figcaption>Tour West Rapids</figcaption>
@@ -59,6 +59,7 @@
                 <img src="images/raftingexample5.jpg" alt="Example 5" width="200">
                 <figcaption>Guided Personal Rapids Adventure</figcaption>
                 </figure>
+                </div>
             </section>
         </main>
         <footer>
