--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -110,5 +110,5 @@
             </nav>
             <link href="https://app.moqups.com/Z9Jkf7wfsis5wdiB9TlwY1GtQFjp3k39/view/page/ad64222d5">
         </footer>
-
+    </body>
 </html>
