--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -88,8 +88,8 @@
                     <input type="checkbox" name="subscribe" value="yes"> Please subscribe me to the monthly newsletter
                 </label>
     
-                <!-- Submit button -->
-                <button type="submit" class="submit-btn">Submit</button>
+                <!-- Send button -->
+                <button type="send" class="send-btn">Submit</button>
     
             </form>
         </div>
