--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -88,8 +88,8 @@
                     <input type="checkbox" name="subscribe" value="yes"> Please subscribe me to the monthly newsletter
                 </label>
     
-                <!-- Send button -->
-                <button type="send" class="send-btn">Submit</button>
+                <!-- Submit button -->
+                <button type="send" class="submit-btn">Send</button>
     
             </form>
         </div>
@@ -108,7 +108,7 @@
                     <img src="images/instagram.webp" alt="Instagram" width="50">
                 </a>
             </nav>
-            <link href="https://app.moqups.com/Z9Jkf7wfsis5wdiB9TlwY1GtQFjp3k39/view/page/ad64222d5">
+            <link rel="wireframe" href="images/contactwireframe.png">
         </footer>
     </body>
 </html>
