--- a/wwr/trips.html
+++ b/wwr/trips.html
@@ -3,12 +3,12 @@
     <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="About Page, Dry Oar Rafting">
+    <meta name="description" content="Trips Page, Dry Oar Rafting">
     <meta name="author" content="Jessica Austin">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Lato&family=Oswald:wght@200..700&display=swap" rel="stylesheet">
-<title>About Us-Dry Oar Rafting</title>
+<title>Trips-Dry Oar Rafting</title>
 <link rel="stylesheet" href="styles/rafting.css">
     </head>
     <body>
@@ -24,7 +24,7 @@
         <main>
             <div class="hero">
                 <img src="images/raftingbackground.jpg" alt="Background Photo">
-                <h1>Dry Oar Rafting</h1>
+                <h1>White Water Rafting</h1>
                 <article>
                     <img src="images/happyclient.jpg" alt="Happy Client">
                     <p> Find your adventure with us on the rapids! </p>
