--- a/wwr/about.html
+++ b/wwr/about.html
@@ -32,9 +32,14 @@
             </div>
             <section>
                 <h2>History</h2>
-                <p>The Dry Oar Rafting Company started in 1950 taking only a few passengers at a time down the Truckee River in Nevada and California.</p>
-            <img src="images/history.webp" alt="history img">
-                <p>sdkfjsldfjsldkfjsaldkfjldsfjleskfsldfj</p>
+                <div class="History">
+                    <!-- Left Text -->
+                    <div class="text left">The Dry Oar Rafting Company started in 1950 taking only a few passengers at a time down the Truckee River in Nevada and California.</div>
+                    <!-- Image -->
+                    <img src="images/history.webp" alt="history img">
+                    <!-- Right Text -->
+                    <div class="text right">Once Dry Oar Rafting Co took off, we expanded our adventures to other states and also creating personal guided experiences. We want people feel welcome to join our adventure family!</div>
+                </div>
             </section>
             <section>
                 <h2>Adventure Awaits You!</h2>
