--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -29,26 +29,26 @@
             <h2>Send Us a Message</h2>
 
         <p>Dry Oar Rafting</p>
-        <p>Phone: 999-999-9999</p>
-        <p>Email: <a href="mailto:">sadf</a></p>
+        <p>Phone: 945-973-8273</p>
+        <p>Email: <a href="mailto:">dryoarrafting@gmail.com</a></p>
         <div class="map">
             <iframe src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d11076.238244905966!2d-120.16590158574095!3d39.165770847911986!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1sTruckee%20River%20rafting!5e0!3m2!1sen!2sus!4v1733783925001!5m2!1sen!2sus" width="600" height="450" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe> 
         </div>
         </section>
         <section>
-            <h2>Meet Some of Our Employees!</h2>
+            <h2>Meet Some of Our Coaches!</h2>
                 <div class="employee">
                 <figure>
                 <img src="images/happyemployee1.webp" alt="Happy Employee 1" width="200">
-                <figcaption>Rafting Coach 1</figcaption>
+                <figcaption>Elena</figcaption>
                 </figure>
                 <figure>
                 <img src="images/happyemployee2.webp" alt="Happy Employee 2" width="200">
-                <figcaption>Rafting Coach 2</figcaption>
+                <figcaption>Kayla</figcaption>
                 </figure>
                 <figure>
                 <img src="images/happyemployee3.webp" alt="Happy Employee 3" width="200">
-                <figcaption>Rafting Coach 3</figcaption>
+                <figcaption>Joshua</figcaption>
                 </figure>
                 </div>
         </section>
