--- a/wwr/trips.html
+++ b/wwr/trips.html
@@ -24,43 +24,101 @@
         <main>
             <div class="hero">
                 <img src="images/raftingbackground.jpg" alt="Background Photo">
-                <h1>White Water Rafting</h1>
-                <article>
-                    <img src="images/happyclient.jpg" alt="Happy Client">
-                    <p> Find your adventure with us on the rapids! </p>
-                </article>
+                <h1>Trips</h1>
             </div>
             <section>
-                <h2>History</h2>
-                <p>The Dry Oar Rafting Company started in 1950 taking only a few passengers at a time down the Truckee River in Nevada and California.</p>
-            <img src="images/history.webp" alt="history img">
-                <p>sdkfjsldfjsldkfjsaldkfjldsfjleskfsldfj</p>
+                <h1></h1>
             </section>
-            <section>
-                <h2>Adventure Awaits You!</h2>
-                <div class="adventure">
-                <figure>
-                <img src="images/raftingexample1.jpg" alt="Example 1" width="200">
-                <figcaption>Tour West Rapids</figcaption>
-                </figure>
-                <figure>
-                <img src="images/raftingexample2.jpg" alt="Example 2" width="200">
-                <figcaption>First Person POV of Canyons River Rapids</figcaption>
-                </figure>
-                <figure>
-                <img src="images/raftingexample3.jpg" alt="Example 3" width="200" height="150">
-                <figcaption>Green River Rapids</figcaption>
-                </figure>
-                <figure>
-                <img src="images/raftingexample4.jpg" alt="Example 4" width="200">
-                <figcaption>Solo Trip Rapids</figcaption>
-                </figure>
-                <figure>
-                <img src="images/raftingexample5.jpg" alt="Example 5" width="200">
-                <figcaption>Guided Personal Rapids Adventure</figcaption>
-                </figure>
-                </div>
-            </section>
+            <h1>Available Trips</h1>
+<table>
+    <thead>
+        <tr>
+            <th>Trip Name</th>
+            <th>Destination</th>
+            <th>Duration</th>
+            <th>Price</th>
+            <th>Availability</th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr>
+            <td>Tour West Rapids</td>
+            <td>Truckee River West, CA</td>
+            <td>2 days</td>
+            <td>$600</td>
+            <td>Available</td>
+        </tr>
+        <tr>
+            <td>Canyon Rivers Rapids</td>
+            <td>Canyon River, AZ</td>
+            <td>1 day</td>
+            <td>$250</td>
+            <td>Available</td>
+        </tr>
+        <tr>
+            <td>Green River Rapids</td>
+            <td>Green River, OR</td>
+            <td>3 days</td>
+            <td>$1,000</td>
+            <td>Unavailable, sign-ups for next trip open March 2025</td>
+        </tr>
+        <tr>
+            <td>Independent Rapids</td>
+            <td>Truckee River, CA</td>
+            <td>1 day</td>
+            <td>$300</td>
+            <td>Available</td>
+        </tr>
+        <tr>
+            <td>Kit Carson Adventure</td>
+            <td>Carson River, NV</td>
+            <td>3 days</td>
+            <td>$800</td>
+            <td>Available</td>
+        </tr>
+    </tbody>
+</table>
+<h1>Explore Our Available Trips   <!-- Call to Action Button -->
+    <a href="contact.html" class="cta-button">Contact Us for More Information</a>
+    </h1>
+<!-- Trip Descriptions -->
+<div class="trip-container">
+    <!-- Trip 1 -->
+    <div class="trip-card">
+        <img src="images/raftingexample3.jpg" alt="Green River Rapids">
+        <div class="trip-info">
+            <h3>Green River Rapids</h3>
+            <p><strong>Destination:</strong> Oregon</p>
+            <p><strong>Duration:</strong> 3 days</p>
+            <p><strong>Price:</strong> $1,000</p>
+            <p>Enjoy an exhilarating journey along the Green River with us. Test your limits and join our group today. Trips start late May 2025</p>
+        </div>
+    </div>
+    
+    <!-- Trip 2 -->
+    <div class="trip-card">
+        <img src="images/raftingexample1.jpg" alt="Tour West Rapids">
+        <div class="trip-info">
+            <h3>Tour West Rapids</h3>
+            <p><strong>Destination:</strong> Truckee River West, CA</p>
+            <p><strong>Duration:</strong> 2 days</p>
+            <p><strong>Price:</strong> $600</p>
+            <p>Join us on the rapids in Truckee where Dry Oar Rafting all started. Find your love for rafting here with us. Trips begin June 2025</p>
+        </div>
+    </div>
+    
+    <!-- Trip 3 -->
+    <div class="trip-card">
+        <img src="images/raftingexample2.jpg" alt="Canyons River Rapids">
+        <div class="trip-info">
+            <h3>Canyon Rivers Rapids</h3>
+            <p><strong>Destination:</strong>Canyon River, AZ</p>
+            <p><strong>Duration:</strong> 1 day</p>
+            <p><strong>Price:</strong> $250</p>
+            <p>Join us on our newest rapids adventure in Arizona! We travel down through connected canyons and discover the mysteries of Southern Arizona. We offer training to prepare for trip to prepare for the harsh waters of the canyon.</p>
+        </div>
+    </div>
+</div>
         </main>
         <footer>
             <p> &copy;2024 Dry Oar Rafting 😎 Jessica Austin 😎</p>
@@ -75,6 +133,7 @@
                     <img src="images/instagram.webp" alt="Instagram" width="50">
                 </a>
             </nav>
+            <link rel="wireframe" href="images/tripswireframe.png">
         </footer>
     </body>
 </html>
