--- a/wwr/about.html
+++ b/wwr/about.html
@@ -34,7 +34,7 @@
                 <h2>History</h2>
                 <div class="History">
                     <!-- Left Text -->
-                    <div class="text left">The Dry Oar Rafting Company started in 1950 taking only a few passengers at a time down the Truckee River in Nevada and California.</div>
+                    <div class="text left">The Dry Oar Rafting Company started in 1950 taking only a few passengers at a time down the Truckee River in Nevada and California. For 10 years, Dry Oar Rafting Co had only 3 rafts and one route. Over the years, rafting became more popular, more people wanted to know what the excitement was all about.</div>
                     <!-- Image -->
                     <img src="images/history.webp" alt="history img">
                     <!-- Right Text -->
