--- a/wwr/index.html
+++ b/wwr/index.html
@@ -27,7 +27,7 @@
                 <img src="images/largehero.jpg" alt="Home Photo">
             </div>
             <section>
-                <a href="trips.html">Take a Look at the Trips We Offer!</a>
+                <a href="trips.html" height="200">Take a Look at the Trips We Offer!</a>
                 <div class="adventure">
                 <figure>
                 <img src="images/homepgraft1.jpg" alt="Example 1" width="200" height="175">
